--- a/chart.css
+++ b/chart.css
@@ -6,7 +6,12 @@ body{
     height:100vh;
 }
 
-p{margin:1vh 0vh;font-family:Helvetica}
+p{
+    margin:1vh 0vh;
+    font-family:Helvetica;
+    color:#595959;
+    line-height:3vh;
+}
 .mainContainer{
     display:flex;
     flex-direction: column;
@@ -23,7 +28,6 @@ p{margin:1vh 0vh;font-family:Helvetica}
 }
 
 .header{
-    background-color: #595959;
     margin:0;
 }
 
@@ -33,8 +37,9 @@ p{margin:1vh 0vh;font-family:Helvetica}
 }
 
 .para{
-    margin:1vh 2vh 0 1vh;
-    padding: 0 0 0 1vh;
+    /* margin:1vh 2vh 0 1vh; */
+    /* padding: 0 0 0 1vh; */
+    margin: 2vh 2vh 0 2vh;
 }
 
 .lastPara{
@@ -42,16 +47,29 @@ p{margin:1vh 0vh;font-family:Helvetica}
 }
 
 .ringkasanLogo{
-    color:white;
-    font-family: helvetica;
+    background-color: #e1e0e0;
+    color:#757575;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: normal;
     margin:0;
     padding:10px;
     font-size:5vw;
+    /* border-top:solid #ea5547 2vh;
+    border-bottom:solid #ea5547 1vh; */
+    text-align:center;
+
     /* margin:10px; */
+}
+
+h1.ringkasanLogo{
+    padding:1.2vh;
+    margin:0;
+    font-weight: bolder;
 }
 
 .active{
     border-left:solid #ea5547 1vh;
-    margin:0 2vh 0 0vh;
+    padding: 0 0 0 1vh; 
+
+    /* margin:0 2vh 0 0vh; */
 }
